--- a/packages/waffle-chart/src/scss/waffle-chart.scss
+++ b/packages/waffle-chart/src/scss/waffle-chart.scss
@@ -39,11 +39,11 @@
   }
 
   .cove-waffle-chart__trend-row {
-    margin-top: 0.1rem;
+    margin-top: 0.2rem;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    row-gap: 0.1rem;
+    row-gap: 0.2rem;
     min-width: 0;
   }
 
